# dashify-aws-docs

./: .gitignore  Readme.md  pyproject.toml  robots.txt
.github/actions/count-artifacts/: action.yaml
.github/actions/versioning/: action.yaml
.github/workflows/: check-update.yaml  cloudformation-user-guide.yaml  download-test.yaml  download.yaml  jekyll.yml  redshift-database-developer-guide.yaml
AWSCloudFormation/latest/UserGuide/: AWS_APS.html  AWS_CleanRooms.html  AWS_DynamoDB.html  AWS_EFS.html  AWS_ElastiCache.html  AWS_EventSchemas.html  AWS_Evidently.html  AWS_Greengrass.html  AWS_HealthImaging.html  AWS_IoTSiteWise.html  AWS_KendraRanking.html  AWS_KinesisFirehose.html  AWS_Macie.html  AWS_MediaPackage.html  AWS_NimbleStudio.html  AWS_PinpointEmail.html  AWS_Rekognition.html  AWS_S3.html  (+1030 more)
assets/r/: awsdocs-common.css  awsdocs-common.css?version=2021.12.02.css  awsdocs-common.js?version=2021.12.02  awsdocs-doc-page.css?version=2021.12.02.css  awsdocs-doc-page.js?version=2021.12.02  awsdocs-page.css  awsdocs-page.js  vendor1.js  vendor1.js?version=2021.12.02  vendor3.js  vendor4.css?version=2021.12.02.css  vendor4.js?version=2021.12.02
dashify/: __main__.py  cloudformation.py  core.py  plain.py  redshift.py  sitemap.py
docs/: CNAME  Gemfile  _config.yml  index.markdown
docs/_data/: cloudformation.yaml  redshift.yaml
docs/_includes/: head.html
docs/_posts/: 2024-01-23-redshift.markdown  2024-02-07-redshift.markdown  2024-02-20-cloudformation.markdown  2024-02-24-cloudformation.markdown
scripts/check-update/: check-update.py  requirements.txt
(+24242 files in other folders)
