[tool.poetry]
name = "dashify-aws-docs"
version = "1.3.0"
description = "Generate dash docset from AWS dos"
authors = ["Tzu-Ting <tzingshih@gmail.com>"]
packages = [{ include = "dashify" }]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
click = "^8.1.7"
lxml = "^5.1.0"
tqdm = "^4.66.1"

[tool.poetry.scripts]
dashify = "dashify.__main__:entry"

[tool.poetry.group.ci]
optional = true
[tool.poetry.group.ci.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
